# auto_buy_sh

./: Cargo.toml  run.sh
res/: fomo.json
src/: error.rs  main.rs
