[package]
name = "auto_buy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-web = "4.0.0-beta.13"
actix-web-actors = "4.0.0-beta.7"
secp256k1 = "0.20.3"
web3 = { version = "0.17.0", default-features = false, features = [
    "http-rustls-tls","signing"
] }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = "1.0.72"
thiserror = "1.0.30"
env_logger = "0.9"
log = "0.4.14"
chrono = "0.4"
log4rs = "0.10.0"
job_scheduler = "*"